--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-quill": "^1.3.5",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
