--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,17 +9,17 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "logo.svg",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/svg"
-    },
-    {
-      "src": "logo.svg",
+      "src": "192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo.svg",
+      "src": "256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
